<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="example.com.tddlogin.ui.login.LoginFragment"
        android:label="LoginFragment"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_loginFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out" />

    </fragment>

    <fragment
        android:id="@+id/homeFragment"
        android:name="example.com.tddlogin.ui.home.HomeFragment"
        android:label="HomeFragment"
        tools:layout="@layout/fragment_home">
    </fragment>



</navigation>
